# newsletter-rs

./: .env  .gitignore  Cargo.toml  README.md  cobertura.xml  ports.rs
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-5b3e51dbdcadc3143bc1ee6bc700eb0e7bbc30cff50913468ca5df5c0f29305b.json  query-cee9c144914ea25f363d85b7d6b593cdb579b7cb919a8090ce951a89db19010f.json
docs/: architecture.md  build_optimization.md  database.md  newsletter.md  web_framework.md
migrations/: 20250408201403_subscription.sql  20250409112337_subscriptions.sql  20250429102004_subcription.sql  20250429125953_subcription.sql  20250429130204_subcription.sql  20250429132251_subcription.sql  20250514145445_subcription.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  ports.rs  startup.rs
src/handlers/: config.rs  db_util.rs  health_check.rs  mod.rs  store_subscribed.rs  subscriptions.rs
tests/: creat_subscription_test.rs  health_check.rs  help.rs  helper.rs  helpre.rs  intergration_test.rs  subscriptions.rs
tests/common/: mod.rs
