[package]
name = "newsletter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
eyre = "0.6"  # For convinient error handling  
tokio = { version = "1", features = ["full"] }  
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tower = "0.5"
http-body-util = "0.1.1"
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1"
lazy_static="1.4"
uuid = {version = "1.16",features = ["v4"]}
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"
[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "uuid",
    "chrono"
]
[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }


