[package]
name = "newsletter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"  
eyre = "0.6"  # For convinient error handling  
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } 

[dev-dependencies]
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
